--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,20 @@ h1 {
     margin-bottom: 0.4rem;
 }
 
+.tagline2 {
+    text-align: center;
+    color: #ffffff;
+    font-size: 32px;
+    font-weight: 700;
+    letter-spacing: 2px;
+
+    /* Glow biru sesuai permintaan */
+    text-shadow: 
+        0 0 3px rgba(0, 0, 0, 0.5),
+        0 0 6px rgba(0, 0, 0, 0.6);
+
+    margin-top: 2.5px;
+}
 
 .tagline {
     font-weight: 500;
